--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "gulp",
     "start": "gulp build:watch",
     "lint": "eslint \"./src/**/*.ts\"",
-    "lint:types": "tsc --noEmit"
+    "lint:types": "tsc --noEmit",
+    "serv": "npx http-server"
   },
   "author": "",
   "license": "ISC",
@@ -17,6 +18,7 @@
     "@typescript-eslint/parser": "^5.25.0",
     "eslint": "^8.16.0",
     "gulp": "^4.0.2",
+    "http-server": "^14.1.0",
     "raw-loader": "^4.0.2",
     "ts-loader": "^9.3.0",
     "typescript": "^4.6.4",
